--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 
 // @import "base/animations";
 @import "base/base";
-// @import "base/typography";
+@import "base/typography";
 @import "base/utilities";
 
 // @import "components/bg-video";
@@ -11,12 +11,12 @@
 // @import "components/card";
 // @import "components/widget";
 // @import "components/slide";
-// @import "components/form";
+@import "components/form";
 // @import "components/checkmark";
 
-// @import "layout/navigation";
+@import "layout/navigation";
 // @import "layout/sidebar";
 // @import "layout/dropdown";
-// @import "layout/header";
+@import "layout/header";
 // @import "layout/footer";
 @import "pages/home";
