--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,13 +1,18 @@
 // Fonts
 $font-primary: 'Nunito', sans-serif;
 $font-link: 'Caveat Brush', cursive;
-$font-heading: 'Abril Fatface', cursive;
+$font-heading-1: 'Poppins', sans-serif;
+$font-heading-2: 'Abril Fatface', cursive;
 
 // Colors
 $color-primary: #656565;
 $color-secondary: #fff;
 $color-tertiary: #fe5d4c;
 $bg-color: #484848;
+
+$bkg-top-color: #0a1923;
+$bkg-dropdown-color: #f3f3f4;
+
 
 // Default Font Size
 $default-font-size: 62.5%;
