--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,26 @@
+@keyframes animate__heading {
+  0% {
+    transform: translateY(15%);
+    opacity: 0; }
+  30% {
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0; }
+
+a {
+  text-decoration: none;
+  color: #fff; }
+
+li {
+  list-style-type: none; }
 
 html {
   box-sizing: border-box;
@@ -18,6 +37,21 @@ body {
   display: grid;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 16.5rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
 
+.heading-1 {
+  font-size: 6.5rem;
+  line-height: 1.2;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif; }
+
+.heading-3 {
+  font-size: 3rem; }
+
+.box-center {
+  grid-column: center-start / center-end;
+  display: grid;
+  grid-template-columns: [center-start] repeat(8, [col-start] minmax(min-content, 16.5rem) [col-end]) [center-end];
+  grid-template-rows: auto; }
+
 .box-center-3 {
   grid-column: center-start / center-end;
   display: grid;
@@ -32,8 +66,258 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   justify-items: center; }
 
+.active::after {
+  content: "";
+  display: block;
+  height: 4px;
+  background-color: #fe5d4c; }
+
+.checkmark {
+  display: inline-block;
+  background-color: #fe5d4c;
+  width: 1.1rem;
+  height: 1.1rem;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all .4s; }
+  .checkmark:hover {
+    background-color: #484848;
+    transform: scale(2.3);
+    border: 1px solid #fff; }
+  .checkmark__box {
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5rem;
+    z-index: 999; }
+
+.btn {
+  font-size: 2rem;
+  padding: 1.7rem 0;
+  width: 100%;
+  color: #fff;
+  background-color: #fe5d4c;
+  cursor: pointer;
+  border: none;
+  transition: all .4s;
+  font-weight: 600; }
+  .btn:focus {
+    outline: none; }
+  .btn:hover {
+    color: #fe5d4c;
+    background-color: #fff; }
+
+.form__content {
+  grid-column: col-end 5 / center-end;
+  grid-row: 2 / 4;
+  background-color: rgba(10, 25, 35, 0.7);
+  padding: 5rem;
+  margin: 6rem 0 5rem 8rem;
+  font-family: "Poppins", sans-serif; }
+
+.form__group {
+  margin-top: 1rem; }
+
+.form__input, .form__select {
+  display: block;
+  width: 100%;
+  padding: 1.5rem 2rem;
+  color: #889298;
+  font-weight: 700; }
+
+.form__more-filds {
+  display: none; }
+
+.form__more-toggle {
+  display: block;
+  margin: 1rem 0;
+  text-align: center;
+  padding: 1.3rem 0; }
+  .form__more-toggle::after {
+    content: '';
+    display: inline-block;
+    border: solid currentColor;
+    border-width: 0 2px 2px 0;
+    padding: 3px;
+    transform: rotate(45deg);
+    margin-left: .6rem;
+    margin-bottom: 3px; }
+
+.form__more-input {
+  padding: 1.5rem 2rem;
+  width: 49%; }
+
+.form__more-title {
+  display: block; }
+
+.form__input:focus, .form__select:focus, .form__more-input:focus {
+  outline: none; }
+
+#form__dropdown {
+  display: none; }
+
+input[type="text"]::-webkit-input-placeholder,
+input[type="number"]::-webkit-input-placeholder,
+.form__select {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: rgba(10, 25, 35, 0.3); }
+
+input[type="checkbox"]:checked ~ .form__more-filds {
+  display: block; }
+
+input[type="checkbox"]:checked ~ div + .form__more-toggle::after {
+  transform: rotate(-135deg);
+  margin-bottom: 0; }
+
+.icon {
+  width: 2rem;
+  height: 2rem;
+  fill: #fe5d4c;
+  transition: all .4s; }
+  .icon:active, .icon:hover {
+    fill: #fff; }
+
+.navigation {
+  grid-column: col-start 3 / col-end 6;
+  font-size: 2rem;
+  display: grid;
+  align-content: center;
+  margin-top: 3.5rem; }
+  .navigation__item {
+    display: flex;
+    justify-content: space-between; }
+  .navigation__list {
+    position: relative;
+    cursor: pointer;
+    transition: all .5s; }
+    .navigation__list:not(:last-child)::after {
+      content: '';
+      display: inline-block;
+      border: solid currentColor;
+      border-width: 0 2px 2px 0;
+      padding: 3px;
+      transform: rotate(45deg);
+      margin-left: .5rem;
+      transition: all .5s; }
+  .navigation__list:hover .navigation__link::after {
+    transform: scaleX(1);
+    transition: all .5s;
+    background-color: #fe5d4c; }
+  .navigation__list:hover:not(:last-child)::after {
+    transform: rotate(-135deg); }
+  .navigation__link {
+    display: inline-block;
+    padding-bottom: 2px; }
+    .navigation__link::after {
+      transform: scaleX(0);
+      content: "";
+      display: block;
+      height: 4px;
+      background-color: transparent; }
+
+.topbar {
+  background-color: rgba(10, 25, 35, 0.7);
+  grid-row: 1 / 2;
+  grid-column: full-start / full-end;
+  display: grid;
+  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 16.5rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  align-content: center;
+  color: #656565;
+  font-size: 1.2rem; }
+  .topbar__text {
+    grid-column: center-start / col-start 6;
+    align-self: center; }
+  .topbar__link {
+    color: rgba(254, 93, 76, 0.8);
+    transition: all .5s; }
+    .topbar__link:hover {
+      color: #fff; }
+
+.social__media-topbar {
+  grid-column: col-end 7 / center-end;
+  display: flex;
+  justify-content: space-between; }
+
+.dropdown__menu {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  background-color: #f3f3f4;
+  transform: translate(0.2rem, 1.5rem);
+  transition: all .4s; }
+  .dropdown__menu-list {
+    border-bottom: 1px solid currentColor; }
+    .dropdown__menu-list:hover {
+      background-color: rgba(101, 101, 101, 0.2); }
+  .dropdown__menu-link {
+    font-size: 1.7rem;
+    color: #656565;
+    width: 20rem;
+    display: block;
+    padding: 1.875rem 2.25rem 1.75rem;
+    font-weight: 400; }
+
+.navigation__list:hover .dropdown__menu {
+  transform: translate(0, 0);
+  opacity: 1;
+  visibility: visible; }
+
 .header {
-  grid-column: full-start / full-end; }
+  background-image: linear-gradient(to right bottom, rgba(10, 25, 35, 0.2), rgba(10, 25, 35, 0.9)), url(../img/header-bg-1.jpg);
+  background-size: cover;
+  background-position: center;
+  grid-column: full-start / full-end;
+  grid-template-rows: 5rem repeat(3, min-content);
+  display: grid;
+  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 16.5rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  color: #fff;
+  font-size: 1.7rem;
+  font-weight: 700; }
+  .header__contact {
+    grid-column: col-end 6 / col-end 8;
+    text-align: end;
+    align-self: center; }
+    .header__contact-icon {
+      width: 3rem;
+      height: 3rem;
+      margin-bottom: -0.5rem; }
+    .header__contact-number {
+      font-size: 2.8rem; }
+  .header__content {
+    grid-column: center-start / col-end 3;
+    grid-row: 2 / 3;
+    align-self: end;
+    margin-top: 20rem; }
+    .header__content h1 {
+      margin-bottom: 2rem; }
+    .header__content-box {
+      opacity: 0;
+      overflow: hidden;
+      transition: opacity 1s; }
+      .header__content-box::before {
+        content: "";
+        display: block;
+        height: 4px;
+        background-color: #fe5d4c;
+        width: 10rem;
+        margin-bottom: 5rem; }
+
+.logo {
+  width: 12rem;
+  height: 9rem;
+  background-color: rgba(10, 25, 35, 0.7);
+  padding: 1rem; }
+  .logo__img {
+    width: 100%;
+    height: 100%; }
+
+.slide__group {
+  display: none; }
+
+input[type="radio"]:checked + .header__content-box {
+  opacity: 1;
+  animation: animate__heading 1.5s; }
 
 .service {
   background-color: blue;
