--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,15 @@
 *::before,
 *::after {
 	box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  color: $color-secondary;
+}
+li {
+  list-style-type: none;
 }
 html {
   box-sizing: border-box;
