--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,22 +1,22 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-// @import "base/animations";
+@import "base/animations";
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
-// @import "components/bg-video";
-// @import "components/button";
+@import "components/checkmark";
+@import "components/button";
 // @import "components/card";
 // @import "components/widget";
 // @import "components/slide";
 @import "components/form";
-// @import "components/checkmark";
+@import "components/icons";
 
 @import "layout/navigation";
-// @import "layout/sidebar";
-// @import "layout/dropdown";
+@import "layout/topbar";
+@import "layout/dropdown";
 @import "layout/header";
 // @import "layout/footer";
 @import "pages/home";
