--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,8 +10,13 @@ $color-secondary: #fff;
 $color-tertiary: #fe5d4c;
 $bg-color: #484848;
 
+// BKG Colors
 $bkg-top-color: #0a1923;
 $bkg-dropdown-color: #f3f3f4;
+$bkg-section-color: rgba(241, 238, 238, 0.466);
+
+// Box Shadow
+$box-shadow: #efeded;
 
 
 // Default Font Size
