--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,26 @@ body {
   font-weight: 700;
   font-family: "Poppins", sans-serif; }
 
+.heading-2 {
+  font-size: 4rem;
+  line-height: 1;
+  font-family: "Abril Fatface", cursive;
+  font-weight: 400; }
+
 .heading-3 {
   font-size: 3rem; }
+
+.heading-4 {
+  font-size: 2.2rem;
+  font-weight: 400; }
+
+.features-big-text {
+  position: absolute;
+  top: -7rem;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  opacity: .2; }
 
 .box-center {
   grid-column: center-start / center-end;
@@ -53,18 +71,18 @@ body {
   grid-template-rows: auto; }
 
 .box-center-3 {
-  grid-column: center-start / center-end;
   display: grid;
+  grid-column: center-start / center-end;
   grid-row-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-  justify-items: center; }
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); }
 
 .box-center-4 {
-  grid-column: center-start / center-end;
   display: grid;
+  grid-column: center-start / center-end;
+  grid-template-columns: repeat(auto-fit, minmax(calc(25rem - 2rem), 1fr));
+  grid-column-gap: 2rem;
   grid-row-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  justify-items: center; }
+  margin-top: 5rem; }
 
 .active::after {
   content: "";
@@ -224,7 +242,7 @@ input[type="checkbox"]:checked ~ div + .form__more-toggle::after {
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 16.5rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
   align-content: center;
   color: #656565;
-  font-size: 1.2rem; }
+  font-size: 1.3rem; }
   .topbar__text {
     grid-column: center-start / col-start 6;
     align-self: center; }
@@ -275,7 +293,7 @@ input[type="checkbox"]:checked ~ div + .form__more-toggle::after {
   font-size: 1.7rem;
   font-weight: 700; }
   .header__contact {
-    grid-column: col-end 6 / col-end 8;
+    grid-column: col-end 6 / center-end;
     text-align: end;
     align-self: center; }
     .header__contact-icon {
@@ -320,8 +338,30 @@ input[type="radio"]:checked + .header__content-box {
   animation: animate__heading 1.5s; }
 
 .service {
-  background-color: blue;
-  grid-column: full-start / full-end; }
+  background-color: rgba(241, 238, 238, 0.466);
+  grid-column: full-start / full-end;
+  display: grid;
+  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 16.5rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  grid-template-rows: repeat(2, min-content);
+  text-align: center;
+  font-size: 1.5rem; }
+  .service__title {
+    grid-column: col-start 4 / col-end 5;
+    margin-top: 7rem; }
+  .service__container {
+    grid-row: 2 / 3;
+    margin-bottom: 10rem;
+    position: relative; }
+  .service__icon svg {
+    width: 9rem;
+    height: 9rem;
+    border: 0.7rem solid #fff;
+    border-radius: 50%;
+    padding: 1rem; }
+    .service__icon svg:hover {
+      fill: #fe5d4c; }
+  .service__content:hover > .service__icon > .icon {
+    box-shadow: 0 0 0 0.5rem #efeded; }
 
 .latest__properties {
   background-color: #333;
