--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,6 +4,24 @@
   font-weight: 700;
   font-family: $font-heading-1;
 }
+.heading-2 {
+  font-size: 4rem;
+  line-height: 1;
+  font-family: $font-heading-2;
+  font-weight: 400;
+}
 .heading-3 {
   font-size: 3rem;
+}
+.heading-4 {
+  font-size: 2.2rem;
+  font-weight: 400;
+}
+.features-big-text {
+  position: absolute;
+  top: -7rem;
+  left: 0;
+  width: 100%;
+  z-index: -1;
+  opacity: .2;
 }
