--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -19,18 +19,18 @@
                          grid-template-rows: auto;
 }
 .box-center-3 {
-	grid-column: center-start / center-end;
 	display: grid;
+	grid-column: center-start / center-end;
 	grid-row-gap:2rem;
-	grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
-	justify-items: center;
+	grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
 }
 .box-center-4 {
-	grid-column: center-start / center-end;
 	display: grid;
-	grid-row-gap:2rem;
-	grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-	justify-items: center;
+	grid-column: center-start / center-end;
+	grid-template-columns: repeat(auto-fit, minmax(calc(25rem - 2rem), 1fr));
+	grid-column-gap: 2rem;
+  grid-row-gap:2rem;
+  margin-top: 5rem;
 }
 // Create active link class
 // Active hover class
