--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,41 @@
-
+// *************************** //
+//          SERVICE           //
+// ************************* //
 .service {
-  background-color: blue;
+  background-color: $bkg-section-color;
    grid-column: full-start / full-end;
+   @include grid-template-columns;
+   grid-template-rows: repeat(2, min-content);
+   text-align: center;
+   font-size: 1.5rem;
+   &__title {
+    grid-column: col-start 4 / col-end 5;
+    margin-top: 7rem;
+   }
+   &__container {
+    grid-row: 2 / 3;
+    margin-bottom: 10rem;
+    position: relative;
+   }
+   &__icon {
+    svg {
+      width: 9rem;
+      height: 9rem;
+      border: .7rem solid $color-secondary;
+      border-radius: 50%;
+      padding: 1rem; 
+      &:hover {
+        fill: $color-tertiary;
+      }
+    }
+   }
+   &__content:hover > &__icon > .icon {
+      box-shadow: 0 0 0 .5rem $box-shadow;
+   }
 }
+// *************************** //
+//     LATEST PROPERTIES      //
+// ************************* //
 .latest__properties {
   background-color: #333;
    grid-column: center-start / center-end;
