--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $font-heading-2: 'Abril Fatface', cursive;
 
 // Colors
 $color-primary: #656565;
+$color-primary-2: #6d6c6ccb;
 $color-secondary: #fff;
 $color-tertiary: #fe5d4c;
 $bg-color: #484848;
@@ -14,7 +15,8 @@ $bg-color: #484848;
 $bkg-top-color: #0a1923;
 $bkg-dropdown-color: #f3f3f4;
 $bkg-section-color: rgba(241, 238, 238, 0.466);
-
+$bkg-card-color: rgba(132, 132, 132, 0.66);
+$bkg-btn-color: #080808;
 // Box Shadow
 $box-shadow: #efeded;
 
