--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 
 @import "components/checkmark";
 @import "components/button";
-// @import "components/card";
+@import "components/card";
 // @import "components/widget";
 // @import "components/slide";
 @import "components/form";
