--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,4 @@
-
+// Primary BTN
 .btn {
   font-size: 2rem;
   padding: 1.7rem 0;
@@ -15,5 +15,48 @@
   &:hover {
     color: $color-tertiary;
     background-color: $color-secondary;
+  }
+}
+// Card BTN
+.btn-card {
+  background-color: rgba($bkg-btn-color, .7);
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: $color-secondary;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  transition: all .3s;
+  &:focus {
+    outline: none;
+  }
+  &:hover,
+  &:focus  {
+    background-color: $color-tertiary;
+  }
+}
+// Slider BTN
+.btn__slide {
+  border: none;
+  border-radius: 50%;
+  z-index: 1;
+  cursor: pointer;
+  transition: all .3s;
+  background-color: rgba($bkg-card-color, .5);
+  color: $color-secondary;
+  font-size: 1.5rem;
+  padding: .5rem 1.2rem;
+  &--1 {
+    top: 47%;
+    left: 0.5rem;
+  }
+  &--2 {
+    top: 45%;
+    right: .5rem;
+  }
+  &:hover,
+  &:focus {
+    outline: none;
+    background-color: rgba($bkg-card-color, .8);
   }
 }
