--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,9 +23,9 @@
       height: 9rem;
       border: .7rem solid $color-secondary;
       border-radius: 50%;
-      padding: 1rem; 
-      &:hover {
-        fill: $color-tertiary;
+      padding: 1rem;
+      .icon-tools-2 {
+        transform: scale(.75) translate(1.2rem, .9rem);
       }
     }
    }
@@ -37,9 +37,24 @@
 //     LATEST PROPERTIES      //
 // ************************* //
 .latest__properties {
-  background-color: #333;
-   grid-column: center-start / center-end;
+  font-size: 1.5rem;
+  grid-template-rows: repeat(2, min-content);
+  @include grid-template-columns;
+  grid-column: full-start / full-end;
+  &-title {
+    grid-column: 1 / -1;
+    text-align: center;
+    margin-top: 7rem;
+  }
+  &-card {
+    margin-bottom: 7rem;
+  }
 }
+
+
+// *************************** //
+//        LOCATIONS           //
+// ************************* //
 .locations {
   background-color: yellow;
    grid-column: full-start / full-end;
