--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -14,8 +14,10 @@
 .box-center-3 {
 	display: grid;
 	grid-column: center-start / center-end;
-	grid-row-gap:2rem;
-	grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-row-gap:2rem;
+  grid-column-gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  margin-bottom: 7rem;
 }
 .box-center-4 {
 	display: grid;
