--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,10 +22,11 @@
 .box-center-4 {
 	display: grid;
 	grid-column: center-start / center-end;
-	grid-template-columns: repeat(auto-fit, minmax(calc(25rem - 2rem), 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 	grid-column-gap: 2rem;
   grid-row-gap:2rem;
   margin-top: 5rem;
+  margin-bottom: 7rem;
 }
 // Create active link class with jQuery
 // Active hover class
