--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,5 +18,5 @@
 @import "layout/topbar";
 @import "layout/dropdown";
 @import "layout/header";
-// @import "layout/footer";
+@import "layout/footer";
 @import "pages/home";
