--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,8 @@ $color-primary: #656565;
 $color-primary-2: #6d6c6ccb;
 $color-secondary: #fff;
 $color-tertiary: #fe5d4c;
+$color-tertiary-2: #992600;
+$color-tertiary-3: #b6350b;
 $bg-color: #484848;
 
 // BKG Colors
