--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -56,7 +56,7 @@
     grid-template-columns: repeat(3, minmax(min-content, 1fr));
     padding: 2rem;
     a {
-      color: $color-tertiary;
+      color: $color-tertiary-3;
       &:focus {
         outline: none;
       }
