--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,70 @@
 .footer {
-  background-color: coral;
-   grid-column: full-start / full-end;
+  background-color: $bkg-section-color;
+  grid-column: full-start / full-end;
+  @include grid-template-columns;
+  font-size: 1.5rem;
+  padding-bottom: 5rem;
+  a {
+    color: $color-primary;
+  }
+  h4 {
+    text-transform: uppercase;
+  }
+  &__box {
+    padding-bottom: 5rem;
+    margin-bottom: 3rem;
+    border-bottom: 2px solid rgba($color-primary-2, .1);
+  }
+  &__logo {
+    margin-bottom: 3rem;
+  }
+  &__title {
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+  &__item {
+    margin-top: 3rem;
+  }
+  &__list {
+    cursor: pointer;
+    .icon {
+      width: 1.5rem;
+      height: 1.5rem;
+      margin-right: 1rem;
+      fill: $color-primary;
+      transition: all .4s;
+    }
+    &:not(:last-child) {
+      margin-bottom: .7rem;
+    }
+    &:hover > * {
+      fill: $color-tertiary-3;
+      color: $color-tertiary-3;
+    }
+  }
+  .icon {
+    margin-bottom: -.3rem;
+  }
+}
+.social__media {
+  margin-top: 4rem;
+  &-link:not(:last-child) {
+    margin-right: 2rem;
+  }
+  .icon {
+    width: 3rem;
+    height: 3rem;
+    fill: $color-primary;
+    &:hover {
+      fill: $color-tertiary;
+      transform: scale(1.2);
+    }
+  }
+}
+.copyright {
+  grid-column: full-start / full-end;
+  text-align: center;
+  &:hover > a {
+    color: $color-tertiary-2;
+  }
 }
