--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -152,7 +152,7 @@
   }
   &__info {
     margin-top: 2rem;
-    color: $color-tertiary;
+    color: $color-tertiary-3;
     font-weight: 600;
   }
   &__stars {
@@ -194,7 +194,7 @@
      display: flex;
      justify-content: space-between;
     a {
-      color: $color-tertiary;
+      color: $color-tertiary-3;
       font-size: 1.8rem;
     }
    }
@@ -234,7 +234,7 @@
     width: 50%;
      &-title {
        display: block;
-       color: $color-tertiary;
+       color: $color-tertiary-3;
        border-bottom: 1px solid $bkg-dropdown-color;
      }
      span {
@@ -251,7 +251,7 @@
    }
    &__web > a,
    &__email > a {
-    color: #992600;
+    color: $color-tertiary-2;
     &:hover {
       color: $color-tertiary;
     }
